<resources>
    <string name="app_name" translatable="false">Officinal</string>
    <string name="action_settings">Filter</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_doctor__apply__here_" translatable="false">Doctor_Apply_Here_Activity</string>
    <string name="disease">Filter By Disease</string>
    <string name="symptoms">Filter By Symptoms</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="apply">Not a member? Apply Here...</string>
    <string name="profile">My Profile</string>
    <string name="qulaification">Qualification</string>
    <string name="aadhar">Aadhar Card</string>
    <string name="applicant">Name Of the Applicant</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="enter_otp">Enter otp</string>
    <string name="login_dr">Login (for Doctors)</string>
    <string name="search">Search for Nearby</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="contact">Contact No</string>
    <string name="signout">Sign out</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="enter_mobile">Enter Mobile Numer</string>
    <string name="apply_1">Apply</string>
    <string name="filter_touch">Filter By Touch</string>
    <string name="generic">Generic Drugs</string>
</resources>