<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_nerby"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/signout" />


    </group>



</menu>
