<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/icon_2" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/nameTextview"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/OTP"
            android:layout_alignStart="@+id/OTP"
            android:layout_below="@+id/UserMobile"
            android:text="@string/name"
            android:visibility="invisible"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UserNameEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            android:layout_alignBaseline="@+id/OTP"
            android:layout_alignBottom="@+id/OTP"
            android:layout_alignLeft="@+id/OTP"
            android:layout_alignStart="@+id/OTP"
            android:background="@drawable/round"
            android:hint="@string/applicant"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:id="@+id/aadharTextview"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/UserNameEditText"
            android:layout_alignStart="@+id/UserNameEditText"
            android:layout_below="@+id/UserNameEditText"
            android:layout_marginTop="9dp"
            android:visibility="invisible"
            android:text="@string/aadhar"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/aadharEdittext"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/aadharTextview"
            android:layout_alignStart="@+id/aadharTextview"
            android:layout_below="@+id/aadharTextview"
            android:paddingLeft="20dp"
            android:visibility="invisible"
            android:layout_marginTop="9dp"
            android:background="@drawable/round"
            android:hint="@string/aadhar" />


        <EditText
            android:id="@+id/UserMobile"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/mobiletext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:background="@drawable/round"
            android:hint="@string/mobile_no"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/OTP"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/UserMobile"
            android:layout_alignBottom="@+id/UserMobile"
            android:layout_alignLeft="@+id/UserMobile"
            android:layout_alignStart="@+id/UserMobile"
            android:background="@drawable/round"
            android:hint="@string/enter_otp"
            android:paddingLeft="20dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/mobiletext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/mobile_no"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/VerifyUserOtp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameTextview"
            android:layout_alignStart="@+id/nameTextview"
            android:layout_alignTop="@+id/aadharTextview"
            android:background="@drawable/roundbutton"
            android:text="Verify OTP"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/SendUserOtp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/UserMobile"
            android:layout_alignStart="@+id/UserMobile"
            android:layout_below="@+id/nameTextview"
            android:background="@drawable/roundbutton"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="20dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/rentermobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="Re-Enter Mobile Number"
        android:textColor="#ffffff"
        android:textStyle="bold" />


</RelativeLayout>